Fix bug which causes dashboard image to overlap logs on smaller devices

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -264,7 +264,7 @@ footer .fab {
 }
 
 .profile-image{
-    width: 350px;
+    width: 100%;
     padding: 10px 0px;
 }
 
